# gemini-public-api

./: .coveragerc  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python-app.yml
gemini_public_api/: api.py  exceptions.py  public_endpoints.py  public_sandbox_endpoints.py
gemini_public_api/aiohttp/: api.py  session_context_manager.py
tests/: test_api.py  test_async_api.py  test_public_api.py  test_session_context_manager.py
